--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,12 @@ plugins {
 }
 
 android {
-
-    namespace 'com.btcdatch'
-    compileSdk 33
+    namespace 'com.lab'
+    compileSdk 32
 
     defaultConfig {
-        applicationId "com.btcdatch"
-        minSdk 28
+        applicationId "com.lab"
+        minSdk 26
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -31,10 +30,16 @@ android {
 
 dependencies {
 
-    implementation 'com.google.code.gson:gson:2.10'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.5.0'
+    implementation 'androidx.room:room-runtime:2.4.3'
+    annotationProcessor 'androidx.room:room-compiler:2.4.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
